--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 
 /*Layouy styling*/
 .container{
-    width: 66%;
+    width: 50%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -16,12 +16,14 @@
     display: flex;
     margin: 0;
     width: 100%;
-    height: 25vh;
+    height: 20vh;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
-
+.centerRow{
+    justify-content: center;
+}
 .button-container{
     display: flex;
     align-items: center;
@@ -68,6 +70,15 @@
 /*Typography*/
 
 
-.main-title{
+.title{
     text-align: center;
+    font-size: 2em;
+    font-weight: 300;
+}
+.title-main{
+    font-weight: 400;
+}
+P{
+    font-weight: 300;
+    font-size: 1.5em;
 }
