--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,41 @@
 
 
 /*Layouy styling*/
+body{
+    height: 100vh;
+    margin: 0;
+    display: flex;
+    background-image: url('../img/background.webp');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: rgba(0,0,0,1);
+    color: rgba(255, 255, 255, 1);
+}
+
 .container{
-    width: 50%;
+    width: 56%;
+    min-height: 50vh;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-content: flex-start;
     flex-wrap: wrap;
-    height: 100vh;
+    align-self: center;
+    backdrop-filter: blur(10px);
+    border-radius: 15px;
+    border: 1px solid;
+    border-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 0px 90px 20px rgba(255, 255, 255, .2);
+
 }
 
 .row{
+    width: 100%;
+    min-height: 10vh;
     display: flex;
     margin: 0;
-    width: 100%;
-    height: 20vh;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -26,11 +45,23 @@
 }
 .button-container{
     display: flex;
-    align-items: center;
+    align-items: center;    
+    padding: 0 2em 0 2em;
+
 }
 
 
 
+@media only screen and (max-width: 768px) {
+    .container{
+        width: 90%;
+    }
+    /* For mobile phones: */
+    .row{
+        justify-content: center;
+    }
+
+  }
 
 
 /*Icon styled button*/
@@ -70,15 +101,18 @@
 /*Typography*/
 
 
-.title{
-    text-align: center;
-    font-size: 2em;
-    font-weight: 300;
-}
 .title-main{
+    font-size: 2em;
     font-weight: 400;
 }
-P{
-    font-weight: 300;
+
+.subtitle{    
+    text-align: center;
     font-size: 1.5em;
+    font-weight: 300;
+}
+
+p{
+    font-weight: 300;
+    font-size: 1em;
 }
